# web-servers-benchmarks

./: .gitignore  README.md  benchmarks.md  docker-compose.yaml
fiber/: go.mod  go.sum  main.go
gin/: Dockerfile  go.mod  main.go
node/: package-lock.json  package.json  server.js
python-fastapi/: Dockerfile  main.py  pyproject.toml
scripts/: parallel-requests.sh  requests.sh
